@@ -1,25 +1,28 @@
 package com.microsoft.azure.storage;
 
 import com.microsoft.azure.storage.blob.*;
-import com.microsoft.azure.storage.blob.Base64;
 import com.microsoft.azure.storage.models.*;
 import com.microsoft.rest.v2.RestResponse;
 import com.microsoft.rest.v2.http.*;
 import com.microsoft.rest.v2.util.FlowableUtil;
 import io.reactivex.Flowable;
+import io.reactivex.functions.BiConsumer;
 import org.joda.time.DateTime;
 import org.junit.Assert;
 import org.junit.Test;
 
-import java.io.ByteArrayOutputStream;
-import java.io.IOException;
+import javax.xml.bind.DatatypeConverter;
+import java.io.*;
+import java.net.MalformedURLException;
+import java.net.InetSocketAddress;
+import java.net.Proxy;
 import java.net.URL;
 import java.nio.ByteBuffer;
 import java.security.InvalidKeyException;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 
-import static org.junit.Assert.assertArrayEquals;
+import static org.junit.Assert.*;
 
 
 public class BlobStorageAPITests {
@@ -55,7 +58,11 @@ public class BlobStorageAPITests {
                 System.getenv().get("ACCOUNT_KEY"));
 
         // Currently only the default PipelineOptions are supported.
-        HttpPipeline pipeline = StorageURL.createPipeline(creds, new PipelineOptions());
+        PipelineOptions po = new PipelineOptions();
+        HttpClient.Configuration configuration = new HttpClient.Configuration(
+                new Proxy(Proxy.Type.HTTP, new InetSocketAddress("localhost", 8888)));
+        po.client = HttpClient.createDefault();//configuration);
+        HttpPipeline pipeline = StorageURL.createPipeline(creds, po);
 
         // Create a reference to the service.
         ServiceURL su = new ServiceURL(
@@ -104,7 +111,7 @@ public class BlobStorageAPITests {
             assertArrayEquals(dataByte, new byte[]{0, 0, 0});
 
             // Set and retrieve the blob properties. Metadata is not yet supported.
-            BlobHttpHeaders headers = new BlobHttpHeaders("myControl", "myDisposition",
+            BlobHTTPHeaders headers = new BlobHTTPHeaders("myControl", "myDisposition",
                     "myContentEncoding", "myLanguage", null,
                     "myType");
             bu.setProperties(headers, null).blockingGet();
@@ -147,7 +154,7 @@ public class BlobStorageAPITests {
             // Create a reference to a new blob within the same container to upload blocks. Upload a single block.
             BlockBlobURL bu3 = cu.createBlockBlobURL("javablob3");
             ArrayList<String> blockIDs = new ArrayList<>();
-            blockIDs.add(Base64.encode(new byte[]{0}));
+            blockIDs.add(DatatypeConverter.printBase64Binary(new byte[]{0}));
             bu3.putBlock(blockIDs.get(0), Flowable.just(ByteBuffer.wrap(new byte[]{0,0,0})), 3,
                     null).blockingGet();
 
@@ -175,8 +182,8 @@ public class BlobStorageAPITests {
             // Parses a URL into its constituent components. This structure's URL fields may be modified.
             BlobURLParts parts = URLParser.parse(bu.toURL());
 
-            // Construct the AccountSasSignatureValues values object. This encapsulates all the values needed to create an AccountSasSignatureValues.
-            AccountSasSignatureValues sas = new AccountSasSignatureValues();
+            // Construct the AccountSASSignatureValues values object. This encapsulates all the values needed to create an AccountSASSignatureValues.
+            AccountSASSignatureValues sas = new AccountSASSignatureValues();
             AccountSASPermission perms = new AccountSASPermission();
             perms.read = true;
             perms.write = true;
@@ -193,18 +200,18 @@ public class BlobStorageAPITests {
             sas.services = service.toString();
             sas.resourceTypes = resourceType.toString();
 
-            // Construct a ServiceSasSignatureValues in a pattern similar to that of the AccountSasSignatureValues.
-            // Comment out the AccountSasSignatureValues creation and uncomment this to run with ServiceSasSignatureValues.
-            /*ServiceSasSignatureValues sas = new ServiceSasSignatureValues("2016-05-31", SASProtocol.HTTPS_HTTP,
+            // Construct a ServiceSASSignatureValues in a pattern similar to that of the AccountSASSignatureValues.
+            // Comment out the AccountSASSignatureValues creation and uncomment this to run with ServiceSASSignatureValues.
+            /*ServiceSASSignatureValues sas = new ServiceSASSignatureValues("2016-05-31", SASProtocol.HTTPS_HTTP,
                     DateTime.now().minusDays(1).toDate(), DateTime.now().plusDays(1).toDate(),
                     EnumSet.of(ContainerSASPermission.READ, ContainerSASPermission.WRITE),
                     null, containerName, null, null,
                     null, null, null, null);*/
 
 
-            // GenerateSASQueryParameters hashes the sas using your account's credentials and then associates the
+            // generateSASQueryParameters hashes the sas using your account's credentials and then associates the
             // sasQueryParameters with the blobURLParts.
-            parts.setSasQueryParameters(sas.GenerateSASQueryParameters(creds));
+            parts.sasQueryParameters = sas.generateSASQueryParameters(creds);
 
             // Using a SAS requires AnonymousCredentials on the pipeline.
             pipeline = StorageURL.createPipeline(new AnonymousCredentials(), new PipelineOptions());
@@ -292,4 +299,241 @@ public class BlobStorageAPITests {
         }
     }
 
+    @Test
+    public void TestPutBlobParallel() throws InvalidKeyException, MalformedURLException {
+        // Creating a pipeline requires a credentials object and a structure of pipeline options to customize the behavior.
+        // Set your system environment variables of ACCOUNT_NAME and ACCOUNT_KEY to pull the appropriate credentials.
+        // Credentials may be SharedKey as shown here or Anonymous as shown below.
+        SharedKeyCredentials creds = new SharedKeyCredentials(System.getenv().get("ACCOUNT_NAME"),
+                System.getenv().get("ACCOUNT_KEY"));
+
+        // Currently only the default PipelineOptions are supported.
+        HttpPipeline pipeline = StorageURL.createPipeline(creds, new PipelineOptions());
+
+        // Create a reference to the service.
+        ServiceURL su = new ServiceURL(
+                new URL("http://" + System.getenv().get("ACCOUNT_NAME") + ".blob.core.windows.net"), pipeline);
+
+        // Create a reference to a container. Using the ServiceURL to create the ContainerURL appends
+        // the container name to the ServiceURL. A ContainerURL may also be created by calling its
+        // constructor with a full path to the container and a pipeline.
+        String containerName = "javatestcontainer" + System.currentTimeMillis();
+        ContainerURL cu = su.createContainerURL(containerName);
+
+        // Create a reference to a blob. Same pattern as containers.
+        BlockBlobURL bu = cu.createBlockBlobURL("javatestblob");
+        try {
+            // Calls to blockingGet force the call to be synchronous. This whole test is synchronous.
+            // APIs will typically return a RestResponse<*HeadersType*, *BodyType*>. It is therefore possible to
+            // retrieve the headers and the deserialized body of every request. If there is no body in the request,
+            // the body type will be Void.
+            // Errors are thrown as exceptions in the synchronous (blockingGet) case.
+
+            // Create the container. NOTE: Metadata is not currently supported on any resource.
+            cu.create(null, PublicAccessType.BLOB).blockingGet();
+
+            Random rand = new Random();
+            ByteArrayOutputStream os = new ByteArrayOutputStream();
+            for(int i=0; i<1024; i++) {
+                os.write(rand.nextInt(50));
+            }
+
+            // Single shot.
+            ByteBuffer data = ByteBuffer.wrap(os.toByteArray());
+            List<ByteBuffer> buffers = Arrays.asList(new ByteBuffer[]{data});
+            Highlevel.UploadToBlockBlobOptions options = Highlevel.UploadToBlockBlobOptions.DEFAULT;
+            int status = Highlevel.uploadByteBuffersToBlockBlob(buffers, bu, options).blockingGet().response().statusCode();
+            assertEquals(201, status);
+
+            // Parallel.
+            buffers = new ArrayList<>();
+            for (int i=0; i<10; i++) {
+                os = new ByteArrayOutputStream();
+                for (int j=0; j<1024; j++) {
+                    os.write(rand.nextInt(30));
+                }
+                buffers.add(ByteBuffer.wrap(os.toByteArray()));
+            }
+            status = Highlevel.uploadByteBuffersToBlockBlob(buffers, bu, options).blockingGet().response().statusCode();
+            assertEquals(201, status);
+
+            ArrayList<ByteBuffer> received = new ArrayList<>();
+            bu.getBlob(null, null, false).blockingGet().body()
+                    .collectInto(received, new BiConsumer<ArrayList<ByteBuffer>, ByteBuffer>() {
+                        @Override
+                        public void accept(ArrayList<ByteBuffer> byteBuffers, ByteBuffer byteBuffer) throws Exception {
+                            byteBuffers.add(byteBuffer);
+                        }
+                    }).blockingGet();
+            ByteBuffer receivedTruncated = ByteBuffer.allocate(1024*10);
+            receivedTruncated.position(0);
+            receivedTruncated.put(received.get(0).duplicate());
+            int i = 1;
+            int total = received.get(0).remaining();
+            while (total < 1024) {
+                total += received.get(i).remaining();
+                receivedTruncated.put(received.get(i));
+                i++;
+            }
+            receivedTruncated.position(0);
+            receivedTruncated.limit(1024);
+            assertEquals(receivedTruncated.compareTo(buffers.get(0)), 0);
+            total = 0;
+            i=0;
+            while (total < 1024) {
+                total += received.get(received.size()-i-1).remaining();
+                i++;
+            }
+            receivedTruncated = ByteBuffer.allocate(1024*10);
+            receivedTruncated.position(0);
+            receivedTruncated.put(received.get(received.size()-i).duplicate());
+            for(int j = i-1; j>=1; j--){
+                receivedTruncated = receivedTruncated.put(received.get(received.size()-j));
+            }
+            receivedTruncated.position(total-1024);
+            receivedTruncated.limit(total);
+            assertEquals(receivedTruncated.compareTo(buffers.get(9)), 0);
+            // TODO: Test different size buffers. Variable sizes, etc.
+        }
+        finally {
+            cu.delete(null).blockingGet();
+        }
+    }
+    @Test
+    public void TestPutBlobParallelFile() throws IOException, InvalidKeyException {
+        int fileLength = 100;
+        File file = new File("testUpload");
+        FileOutputStream fos = new FileOutputStream(file);
+        Random rand = new Random();
+        for (int i=0; i< fileLength; i++) {
+            fos.write(rand.nextInt(30));
+        }
+        fos.close();
+
+        // Creating a pipeline requires a credentials object and a structure of pipeline options to customize the behavior.
+        // Set your system environment variables of ACCOUNT_NAME and ACCOUNT_KEY to pull the appropriate credentials.
+        // Credentials may be SharedKey as shown here or Anonymous as shown below.
+        SharedKeyCredentials creds = new SharedKeyCredentials(System.getenv().get("ACCOUNT_NAME"),
+                System.getenv().get("ACCOUNT_KEY"));
+
+        // Currently only the default PipelineOptions are supported.
+        PipelineOptions po = new PipelineOptions();
+        HttpClient.Configuration configuration = new HttpClient.Configuration(
+                new Proxy(Proxy.Type.HTTP, new InetSocketAddress("localhost", 8888)));
+        po.client = HttpClient.createDefault(configuration);
+        HttpPipeline pipeline = StorageURL.createPipeline(creds, po);
+
+
+        // Create a reference to the service.
+        ServiceURL su = new ServiceURL(
+                new URL("http://" + System.getenv().get("ACCOUNT_NAME") + ".blob.core.windows.net"), pipeline);
+
+        // Create a reference to a container. Using the ServiceURL to create the ContainerURL appends
+        // the container name to the ServiceURL. A ContainerURL may also be created by calling its
+        // constructor with a full path to the container and a pipeline.
+        String containerName = "javatestcontainer" + System.currentTimeMillis();
+        ContainerURL cu = su.createContainerURL(containerName);
+
+        // Create a reference to a blob. Same pattern as containers.
+        BlockBlobURL bu = cu.createBlockBlobURL("javatestblob");
+        try {
+            // Calls to blockingGet force the call to be synchronous. This whole test is synchronous.
+            // APIs will typically return a RestResponse<*HeadersType*, *BodyType*>. It is therefore possible to
+            // retrieve the headers and the deserialized body of every request. If there is no body in the request,
+            // the body type will be Void.
+            // Errors are thrown as exceptions in the synchronous (blockingGet) case.
+
+            // Create the container. NOTE: Metadata is not currently supported on any resource.
+            cu.create(null, PublicAccessType.BLOB).blockingGet();
+            FileInputStream fis = new FileInputStream(file);
+            Highlevel.uploadFileToBlockBlob(fis.getChannel(), bu, BlockBlobURL.MAX_PUT_BLOCK_BYTES,
+                    Highlevel.UploadToBlockBlobOptions.DEFAULT).blockingGet();
+            ArrayList<ByteBuffer> received = new ArrayList<>();
+            bu.getBlob(null, null, false).blockingGet().body()
+                    .collectInto(received, new BiConsumer<ArrayList<ByteBuffer>, ByteBuffer>() {
+                        @Override
+                        public void accept(ArrayList<ByteBuffer> byteBuffers, ByteBuffer byteBuffer) throws Exception {
+                            byteBuffers.add(byteBuffer);
+                        }
+                    }).blockingGet();
+
+            int j=0;
+            ByteBuffer buffer = received.get(j);
+            for (int i=0; i<fileLength; i++) {
+                int a = fis.read();
+                if (buffer.remaining() == 0) {
+                    j++;
+                    buffer = received.get(j);
+                }
+                byte b = buffer.get();
+                assertEquals(a, b);
+            }
+            assertEquals(j, received.size()-1);
+            assertEquals(buffer.remaining(), 0);
+            fis.close();
+        }
+        finally {
+            file.delete();
+            cu.delete(null);
+        }
+    }
+
+    @Test
+    public void TestPutBlobParallelBuffer() throws IOException, InvalidKeyException {
+        int bufferLength = 100;
+        ByteBuffer data = ByteBuffer.allocate(bufferLength);
+        Random rand = new Random();
+        for (int i = 0; i < bufferLength/4; i++) {
+            data.putInt(rand.nextInt(30));
+        }
+        data.position(0);
+
+
+        // Creating a pipeline requires a credentials object and a structure of pipeline options to customize the behavior.
+        // Set your system environment variables of ACCOUNT_NAME and ACCOUNT_KEY to pull the appropriate credentials.
+        // Credentials may be SharedKey as shown here or Anonymous as shown below.
+        SharedKeyCredentials creds = new SharedKeyCredentials(System.getenv().get("ACCOUNT_NAME"),
+                System.getenv().get("ACCOUNT_KEY"));
+
+        // Currently only the default PipelineOptions are supported.
+        PipelineOptions po = new PipelineOptions();
+        HttpClient.Configuration configuration = new HttpClient.Configuration(
+                new Proxy(Proxy.Type.HTTP, new InetSocketAddress("localhost", 8888)));
+        po.client = HttpClient.createDefault(configuration);
+        HttpPipeline pipeline = StorageURL.createPipeline(creds, po);
+
+
+        // Create a reference to the service.
+        ServiceURL su = new ServiceURL(
+                new URL("http://" + System.getenv().get("ACCOUNT_NAME") + ".blob.core.windows.net"), pipeline);
+
+        // Create a reference to a container. Using the ServiceURL to create the ContainerURL appends
+        // the container name to the ServiceURL. A ContainerURL may also be created by calling its
+        // constructor with a full path to the container and a pipeline.
+        String containerName = "javatestcontainer" + System.currentTimeMillis();
+        ContainerURL cu = su.createContainerURL(containerName);
+
+        // Create a reference to a blob. Same pattern as containers.
+        BlockBlobURL bu = cu.createBlockBlobURL("javatestblob");
+        try {
+            // Calls to blockingGet force the call to be synchronous. This whole test is synchronous.
+            // APIs will typically return a RestResponse<*HeadersType*, *BodyType*>. It is therefore possible to
+            // retrieve the headers and the deserialized body of every request. If there is no body in the request,
+            // the body type will be Void.
+            // Errors are thrown as exceptions in the synchronous (blockingGet) case.
+
+            // Create the container. NOTE: Metadata is not currently supported on any resource.
+            cu.create(null, PublicAccessType.BLOB).blockingGet();
+            Highlevel.uploadByteBufferToBlockBlob(data, bu, 5,
+                    Highlevel.UploadToBlockBlobOptions.DEFAULT).blockingGet();
+
+            ByteBuffer result = FlowableUtil.collectBytesInBuffer(
+                    bu.getBlob(null, null, false).blockingGet().body())
+                    .blockingGet();
+
+            assertEquals(result.compareTo(data), 0);
+        } finally {
+            cu.delete(null);
+        }
+    }
 }
